--- a/HakeQuick/DefaultWindow.xaml
+++ b/HakeQuick/DefaultWindow.xaml
@@ -33,6 +33,7 @@
                 <ListView Name="list_actions" Grid.Row="2" Background="Transparent" BorderThickness="0" Margin="10" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Focusable="False">
                     <ListView.ItemContainerStyle>
                         <Style TargetType="ListViewItem">
+                            <EventSetter Event="ListViewItem.PreviewMouseRightButtonDown" Handler="OnListPreviewRightMouseButtonDown"/>
                             <Setter Property="HorizontalContentAlignment" Value="Stretch" />
                             <Setter Property="Template">
                                 <Setter.Value>
