--- a/SettingsApp/MainWindow.xaml
+++ b/SettingsApp/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SettingsApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="糖果启动器设置" Height="450" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="3*"/>
@@ -24,8 +24,8 @@
                     
                 </Style>
                 <Style TargetType="Image">
-                    <Setter Property="Height" Value="18"/>
-                    <Setter Property="Width" Value="18"/>
+                    <Setter Property="Height" Value="16"/>
+                    <Setter Property="Width" Value="16"/>
                     <Setter Property="Margin" Value="0,0,5,0"/>
                 </Style>
                 <Style TargetType="TextBlock">
