--- a/SettingsUI/EditableConfigResources.xaml
+++ b/SettingsUI/EditableConfigResources.xaml
@@ -502,7 +502,7 @@
 				    HorizontalAlignment="Stretch"
 				    VerticalAlignment="Stretch"
                     BorderThickness="0"
-                    Tag="{Binding DisplayName}"
+                    Tag="{Binding KeyName}"
                     Click="OnButtonClick"
 				    IsEnabled="{Binding IsBusy, Converter={x:Static local:InvertedBoolConverter.Instance}}">
                     <Button.Template>
